feat: Adding more packages and adding cargo/bin to path

--- a/imports/hp-prodesk/misc.toml
+++ b/imports/hp-prodesk/misc.toml
@@ -1,5 +1,8 @@
 [managers.portage]
 items = [
 	"app-misc/hello",
-	"app-text/tree"
+	"app-text/tree",
+	"gui-apps/grim",
+	"gui-apps/slurp",
+	"sys-process/htop",
 ]
