--- a/imports/hp-prodesk/desktop.toml
+++ b/imports/hp-prodesk/desktop.toml
@@ -6,7 +6,7 @@ items = [
 	"media-video/pipewire",
 	"gui-wm/hyprland",
 	"x11-terms/alacritty",
-	"www-client/firefox-bin",
+	"www-client/firefox",
 	"app-misc/fastfetch",
 	"net-misc/dhcpcd",
 	"net-misc/networkmanager",
