--- a/imports/hp-prodesk/misc.toml
+++ b/imports/hp-prodesk/misc.toml
@@ -4,5 +4,10 @@ items = [
 	"app-text/tree",
 	"gui-apps/grim",
 	"gui-apps/slurp",
-	"sys-process/htop"
+	"sys-process/htop",
+]
+
+[managers.portage-andromeda]
+items = [
+	"app-misc/cutefetch",
 ]
