feat: Adding guru repo & chore: Installing xdg-desktop-portal-hyprland

--- a/imports/hp-prodesk/desktop.toml
+++ b/imports/hp-prodesk/desktop.toml
@@ -11,3 +11,8 @@ items = [
 	"net-misc/dhcpcd",
 	"net-misc/networkmanager",
 ]
+
+[managers.portage-guru]
+items = [
+	"gui-libs/xdg-desktop-portal-hyprland"
+]
