--- a/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
+++ b/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
@@ -117,18 +117,14 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+	enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+	bezier = md3_decel, 0.05, 0.7, 0.1, 1
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+	animation = border, 1, 2, default
+	animation = fade, 1, 2, md3_decel
+	animation = windows, 1, 4, md3_decel, popin 60%
+	animation = workspaces, 1, 4, md3_decel, slide
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -196,9 +192,8 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, P, pin
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -257,3 +252,4 @@ bindm = $mainMod, mouse:273, resizewindow
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = pin,floating:1
