--- a/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
+++ b/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
@@ -192,7 +192,6 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pin
 bind = $mainMod, R, exec, $menu
 
 # Move focus with mainMod + arrow keys
@@ -252,4 +251,5 @@ bindm = $mainMod, mouse:273, resizewindow
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = pin,floating:1
+windowrulev2 = float, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
