chore: Installing a bunch of tools

--- a/imports/hp-prodesk/desktop.toml
+++ b/imports/hp-prodesk/desktop.toml
@@ -12,6 +12,10 @@ items = [
 	"net-misc/dhcpcd",
 	"net-misc/networkmanager",
 	"gui-apps/wofi",
+	"net-misc/tigervnc",
+	"net-misc/tigervnc-xorg-module",
+	"x11-wm/i3",
+	"x11-misc/dmenu",
 ]
 
 [managers.portage-guru]
