--- a/system_files/hp-prodesk/system_files/etc/nginx/nginx.conf
+++ b/system_files/hp-prodesk/system_files/etc/nginx/nginx.conf
@@ -43,6 +43,7 @@ http {
 
     index index.html;
 
+    # Mysql example application
     server {
         listen 0.0.0.0;
         server_name localhost;
@@ -50,13 +51,26 @@ http {
         access_log /var/log/nginx/localhost.access_log main;
         error_log /var/log/nginx/localhost.error_log info;
 
-        root /var/www/localhost/htdocs;
+        root /var/www/localhost/htdocs/mysql-example;
+
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+
+        index index.html index.php index.htm;
+        error_page 404 index.php;
+
+        charset utf-8;
+
+        location / {
+            try_files $uri $uri/ /index.php$is_args$args;
+        }
 
         location ~ \.php$ {
-            try_files $uri $uri/ =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            include fastcgi_params;
             fastcgi_pass 0.0.0.0:9000;
-            include fastcgi.conf;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
     }
 
