--- a/manager_order.toml
+++ b/manager_order.toml
@@ -3,6 +3,7 @@ begin = [
 ]
 
 end = [
+    "dispatch-interactive-config",
     "systemd-services",
     "systemd-enable-now",
     "systemd-start",
