--- a/imports/hp-prodesk/dev.toml
+++ b/imports/hp-prodesk/dev.toml
@@ -7,6 +7,7 @@ items = [
 	"dev-lang/php",
 	"www-servers/nginx",
 	"dev-db/mysql",
+	"app-editors/vscode",
 ]
 
 [managers.dispatch-interactive-config]
