--- a/system_files/hp-prodesk/make.conf
+++ b/system_files/hp-prodesk/make.conf
@@ -8,6 +8,6 @@ LC_MESSAGES=C.utf8
 
 VIDEO_CARDS="intel vmware"
 INPUT_DEVICES="libinput"
-USE="wayland X pipewire pulseaudio networkmanager wireless bluetooth -gtk -gtk3 -gtk4 -qt -qt5 -qt6 asm bash-completion -emacs -gnome -gnome-keyring initramfs dracut grub introspection ios ipod jit jpeg -kerberos -keyring lm-sensors -man uefi usb vim-syntax vulkan wifi -doc vaapi"
+USE="wayland X pipewire pulseaudio networkmanager wireless bluetooth gtk -kde -qt -qt5 -qt6 asm bash-completion -emacs gnome -gnome-online-accounts dbus -gnome-keyring initramfs dracut grub introspection ios ipod jit jpeg -kerberos -keyring lm-sensors -man uefi usb vim-syntax vulkan wifi -doc vaapi"
 
 PHP_TARGETS="php8_2"
