feat: Installing flatpak & feat: Installing unity hub through flatpaks

--- a/imports/hp-prodesk/initial_packages.toml
+++ b/imports/hp-prodesk/initial_packages.toml
@@ -5,7 +5,8 @@ items = [
 	"app-portage/cpuid2cpuflags",
 	"app-shells/bash",
 	"app-editors/vim",
-	"app-admin/sudo"
+	"app-admin/sudo",
+	"sys-apps/flatpak",
 ]
 
 [managers.systemd-services]
