chore: some tweaks

--- a/imports/hp-prodesk/dev.toml
+++ b/imports/hp-prodesk/dev.toml
@@ -8,6 +8,7 @@ items = [
 	"www-servers/nginx",
 	"dev-db/mysql",
 	"app-editors/vscode",
+	"app-editors/neovim",
 ]
 
 [managers.dispatch-interactive-config]
