--- a/system_files/hp-prodesk/config_files/.config/alacritty/alacritty.toml
+++ b/system_files/hp-prodesk/config_files/.config/alacritty/alacritty.toml
@@ -5,7 +5,11 @@ background = "#141414"
 black = "#242424"
 
 [font.normal]
-family = "Comic Code"
+family = "Monaspace Neon"
 
 [font]
-size = 12
+size = 11
+
+[window.padding]
+x = 12
+y = 12
