--- a/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
+++ b/system_files/hp-prodesk/config_files/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ monitor=HDMI-A-2,1360x768,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
 
