--- a/imports/hp-prodesk/desktop.toml
+++ b/imports/hp-prodesk/desktop.toml
@@ -21,6 +21,8 @@ items = [
 	"x11-misc/dmenu",
 	"x11-wm/awesome",
 	"media-gfx/feh",
+	"media-gfx/maim",
+	"x11-misc/picom",
 	"gnome-base/gnome-light",
 ]
 
