--- a/system_files/hp-prodesk/config_files/.config/alacritty/alacritty.toml
+++ b/system_files/hp-prodesk/config_files/.config/alacritty/alacritty.toml
@@ -1,8 +1,26 @@
 [colors.primary]
 background = "#141414"
+foreground = "#ADB3BA"
 
 [colors.normal]
+black = "#181818"
+red = "#C7AE95"
+green = "#95C7AE"
+yellow = "#AEC795"
+blue = "#AE95C7"
+magenta = "#C79595"
+cyan = "#95AEC7"
+white = "#DFE2E5"
+
+[colors.bright]
 black = "#242424"
+red = "#C7C795"
+green = "#565E65"
+yellow = "#747C84"
+blue = "#ADB3BA"
+magenta = "#C795AE"
+cyan = "#C7CCD1"
+white = "#F3F4F5"
 
 [font.normal]
 family = "Monaspace Neon"
